CV/cover.css
*{
  font-family:Microsoft YaHei,"Helvetica Neue",Helvetica,"Segoe UI",Arial,freesans,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}
html,body{
     margin: 0; padding: 0;
     height: 100%; min-height: 100%;
    overflow-x: hidden; 
    overflow-y: auto;
}
#one{
  position: absolute; top: 0px; left: 0px;
  width: 100%; height: 100%;
  background-color: black;
  padding:20px;
}
.modal-content{
  background-color: black;
}
#mail{
  font-size: 85px;
}
ul#countdown{
  display: inline;
}
ul#countdown > li{
  display: inline;
}

#one h1{
  font-size : 63px;
  align-content: center;
}
.right{
  margin-left:auto;
  right:10px; bottom:0;
  left:auto; top:0;
  float:left;
}
ul {
  list-style-type: none;
}
#arrow-bottom{
  font-size: 30px;
}
#arrow-right{
  font-size: 30px;
}
#arrow-bottom{
  font-size: 30px;
}


.site-header-brand{
  font-size: 38px;
  font-weight: 400;
  line-height: 38px;
  margin-top: 25px;
  margin-left: 10px;
  margin-bottom: 0;
  top: 0px;
  transition: font-size 0.5s ease;
  position:absolute;
  float: right;
}
.bottom{
  float: left;
  top: auto;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  bottom: 0;
}
.site-header-brand:hover{
  font-size: 43px;
  transition: font-size 0.5s ease;
}
.hvr-grow {     
  display: inline-block;
    vertical-align: middle;
    font-size:20px;
    transition: font-size 0.5s ease;
}
.hvr-grow:hover{
  font-size:25px;
  transition: font-size 0.5s ease;
}
#two {
    position: absolute;
    top: 0px; width: 100%; height: 100%;
  background-color: white;
  color: black;
}
#four {
    position: absolute;
    width: 100%; height: 100%;
    background-color: black;
    left: 0px;
    top: 0px;
}
#three {
  top:0px;
  position: absolute; left: 0px;
  width: 100%; height: 100%;
  background-color: white;
  color: black;
}
.heartbeat{
  font-size: 20px;
  font-weight: 400;
  line-height: 38px;
  margin-top: 30px;
  color: black;
  transition: color 3s ease;
}

#kermit {
  position: absolute;
      top:0;
    left:0;
    right:0;
    bottom:0;
    margin:auto;
}
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
  text-decoration: none;
}
a:focus {
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}
a {
    background-color: transparent;
}
@import url(https://fonts.googleapis.com/css?family=Roboto);

body {
    background-color: #f2f2f2;
    color: #000;
    font-family: 'Roboto', sans-serif;
}

.column-chart {
  position: relative;
  z-index: 20;
  bottom: 0;
  left: 50%;
  width: 100%;
  height: 320px;
  margin-top: 40px;
  margin-left: -50%;
}

@media (min-width: 568px) {
  .column-chart {
    width: 80%;
    margin-left: -40%;
  }
}

@media (min-width: 768px) {
  .column-chart {
    width: 60%;
    margin-left: -30%;
  }
}

@media (min-width: 992px) {
  .column-chart {
    width: 40%;
    margin-left: -20%;
  }
}

@media (min-width: 1024px) {
  .column-chart {
    width: 36%;
    margin-left: -18%;
  }
}

.column-chart:before,
.column-chart:after {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  width: calc(100% + 30px);
  height: 25%;
  margin-left: -15px;
  border-top: 1px dashed #b4b4b5;
  border-bottom: 1px dashed #b4b4b5;
}

.column-chart:after {
  top: 50%;
}

.column-chart > .legend {
  position: absolute;
  z-index: -1;
  top: 0;
}

.column-chart > .legend.legend-left {
  left: 0;
  width: 25px;
  height: 75%;
  margin-left: -55px;
  border: 1px solid #b4b4b5;
  border-right: none;
}

.column-chart > .legend.legend-left > .legend-title {
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  width: 65px;
  height: 50px;
  line-height: 50px;
  margin-top: -25px;
  margin-left: -60px;
  font-size: 28px;
  letter-spacing: 1px;
}

.column-chart > .legend.legend-right {
  right: 0;
  width: 100px;
  height: 100%;
  margin-right: -115px;
}

.column-chart > .legend.legend-right > .item {
  position: relative;
  width: 100%;
  height: 25%;
}

.column-chart > .legend.legend-right > .item > h4 {
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  width: 100px;
  height: 40px;
  line-height: 40px;
  margin-top: -20px;
  font-size: 16px;
  text-align: right;
}

.column-chart > .chart {
  position: relative;
  z-index: 20;
  bottom: 0;
  left: 50%;
  width: 98%;
  height: 100%;
  margin-left: -49%;
}

.column-chart > .chart > .item {
  position: relative;
  float: left;
  height: 100%;
}

.column-chart > .chart > .item:before {
  position: absolute;
  z-index: -1;
  content: '';
  bottom: 0;
  left: 50%;
  width: 1px;
  height: calc(100% + 15px);
  border-right: 1px dashed #b4b4b5;
}

.column-chart > .chart > .item > .bar {
  position: absolute;
  bottom: 0;
  left: 3px;
  width: 94%;
  height: 100%;
}

.column-chart > .chart > .item > .bar > span.percent {
  display: block;
  position: absolute;
  z-index: 25;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 26px;
  line-height: 26px;
  color: #fff;
  background-color: #3e50b4;
  font-size: 14px;
  font-weight: 700;
  text-align: center;
  letter-spacing: 1px;
}

.column-chart > .chart > .item > .bar > .item-progress {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 20%;
  color: #fff;
  background-color: #ff4081;
}

.column-chart > .chart > .item > .bar > .item-progress > .title {
  position: absolute;
  top: calc(50% - 13px);
  left: 50%;
  font-size: 14px;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 2px;
  -moz-transform: translateX(-50%) translateY(-50%) rotate(-90deg);
  -webkit-transform: translateX(-50%) translateY(-50%) rotate(-90deg);
  transform: translateX(-50%) translateY(-50%) rotate(-90deg);
}

@media (min-width: 360px) {
  .column-chart > .chart > .item > .bar > .item-progress > .title {
    font-size: 16px;
  }
}

@media (min-width: 480px) {
  .column-chart > .chart > .item > .bar > .item-progress > .title {
    font-size: 18px;
  }
}
/* ... */

